--- a/src/styles/Contentdos.css
+++ b/src/styles/Contentdos.css
@@ -6,7 +6,7 @@
 }
 
 .info {
-    border: solid black;
+    border: solid 0.5px rgb(107, 102, 102);
     margin: 20px;
 }
 
@@ -25,7 +25,7 @@
     margin-right: 15px;
 }
 .info_h {
-    border: solid black;
+    border: solid 0.5px rgb(107, 102, 102);
     margin: 20px;
 }
 
